adding languages on JS file

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,107 +8,107 @@
 				</a>
 				<ul class="header__list">
 					<li class="header__item">
-						<a href="downloads/index.html" class="header__item-link header__item-link--md">downloads</a>
-						<a href="downloads/index.html" class="header__item-link header__item-link--sm">our app</a>
+						<a href="downloads/" class="header__item-link header__item-link--md">downloads</a>
+						<a href="downloads/" class="header__item-link header__item-link--sm">our app</a>
 					</li>
 					<li class="header__item">
-						<a href="blog/index.html" class="header__item-link">Blog</a>
+						<a href="blog/" class="header__item-link header__item-link--blog">Blog</a>
 					</li>
 					<li class="header__item">
-						<a href="faq/index.html" class="header__item-link">faq</a>
+						<a href="faq/" class="header__item-link">faq</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link">Help center</a>
+						<a href="#" class="header__item-link header__item-link--help">Help center</a>
 					</li>
 				</ul>
 
 				<div class="header__languages">
 					<span class="close-lang "></span>
-					<p>Select Your Language</p>
-					<a class="header__languages-btn" href="#">
+					<p class="header__languages-select">Select Your Language</p>
+					<a class="header__languages-btn" href="#" data-lang="en">
 						<svg>
 							<use href="@img/sprites/sprite.svg#united_kingdom"></use>
 						</svg>
 						<span>English</span>
 					</a>
-					<a class="header__languages-btn" href="#">
+					<!-- <a class="header__languages-btn" href="#" data-lang="fr">
 						<svg>
 							<use href="@img/sprites/sprite.svg#france"></use>
 						</svg>
 						<span>Français</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#germany"></use>
 						</svg>
 						<span>Deutsche</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#italy"></use>
 						</svg>
 						<span>Italiano</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<a class="header__languages-btn" href="#" data-lang="es">
 						<svg>
 							<use href="@img/sprites/sprite.svg#spain"></use>
 						</svg>
 						<span>Español</span>
 					</a>
-					<a class="header__languages-btn" href="#">
+					<a class="header__languages-btn" href="#" data-lang="ua">
 						<svg>
 							<use href="@img/sprites/sprite.svg#ukraine"></use>
 						</svg>
 						<span>Українська</span>
 					</a>
-					<a class="header__languages-btn" href="#">
+					<a class="header__languages-btn" href="#" data-lang="ro">
 						<svg>
 							<use href="@img/sprites/sprite.svg#romania"></use>
 						</svg>
 						<span>Română</span>
 					</a>
-					<a class="header__languages-btn" href="#">
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#portugal"></use>
 						</svg>
 						<span>Português</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#serbia"></use>
 						</svg>
 						<span>Srpski</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#poland"></use>
 						</svg>
 						<span>Polski</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#czech_respublic"></use>
 						</svg>
 						<span>Čeština</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#greece"></use>
 						</svg>
 						<span>Ελληνική</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#magyar"></use>
 						</svg>
 						<span>Magyar</span>
-					</a>
-					<a class="header__languages-btn" href="#">
+					</a> -->
+					<!-- <a class="header__languages-btn" href="#">
 						<svg>
 							<use href="@img/sprites/sprite.svg#turkey"></use>
 						</svg>
 						<span>Türkçe</span>
-					</a>
+					</a> -->
 				</div>
 
 				<span class="lang-overlay"></span>
