--- a/src/html/power.html
+++ b/src/html/power.html
@@ -6,15 +6,15 @@
 		<div class="power__container" id="fixed-elements">
 			<div class="power__image">
 				<div class="power__image-box" data-scroll data-scroll-sticky data-scroll-target="#fixed-elements">
-					<img src="@img/power-1.png" alt="background image">
+					<img loading="lazy" src="@img/power-1.png" alt="background image">
 				</div>
 			</div>
 			<!-- <ul class="power__list" data-scroll data-scroll-speed="4"></ul> -->
 			<ul class="power__list" data-scroll data-scroll-speed="2" data-scroll-class="left-scroll" data-scroll-repeat="true">
 				<li class="power__item">
-					<h4 class="power__item-title">Your Games, Our Power</h4>
+					<h4 class="power__item-title power__item-title--first">Your Games, Our Power</h4>
 					<div class="power__item-content content">
-						Games run on our high-end remote gaming rigs, gameplay is streamed to you. Enjoy hundreds of titles from popular platforms.
+						<span class="power__item-content--first">Games run on our high-end remote gaming rigs, gameplay is streamed to you. Enjoy hundreds of titles from popular platforms.</span>
 						<p class="content__platform">
 							<svg width="238" height="30" viewBox="0 0 238 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M16.3906 11.0994C16.3906 8.9994 18.1179 7.27441 20.2209 7.27441C22.3237 7.27441 23.9759 8.9994 23.9759 11.0994C23.9759 13.1994 22.2486 14.9243 20.1457 14.8494C18.0429 14.9243 16.3906 13.1994 16.3906 11.0994ZM20.2209 8.24941C18.6437 8.24941 17.367 9.5244 17.367 11.0994C17.367 12.6744 18.6437 13.9494 20.1457 13.9494C21.7229 13.9494 22.9996 12.6744 22.9996 11.0994C22.9996 9.5244 21.798 8.24941 20.2209 8.24941Z" fill="white"/>
@@ -36,14 +36,14 @@
 					</div>
 				</li>
 				<li class="power__item">
-					<h4 class="power__item-title">No Downloads, No Updates</h4>
-					<p class="power__item-content">
+					<h4 class="power__item-title power__item-title--two">No Downloads, No Updates</h4>
+					<p class="power__item-content power__item-content--two">
 						No downloads, storage and updates of game files. Your job is to game, we take care of the rest.
 					</p>
 				</li>
 				<li class="power__item">
-					<h4 class="power__item-title">No Session Time Limits</h4>
-					<p class="power__item-content">Instant access to games and unlimited gaming sessions. Play as long as you want!</p>
+					<h4 class="power__item-title power__item-title--three">No Session Time Limits</h4>
+					<p class="power__item-content power__item-content--three">Instant access to games and unlimited gaming sessions. Play as long as you want!</p>
 				</li>
 			</ul>
 		</div>
