--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -4,10 +4,10 @@
 			<div class="platform__description">
 				<h2 class="platform__title title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>CLOUD GAMING PLATFORM</h2>
 				<div class="platform__cards">
-					<div class="platform__cards-item">
+					<div class="platform__cards-item platform__cards-item--device">
 						Run PC games <br> on any device
 					</div>
-					<div class="platform__cards-item">
+					<div class="platform__cards-item platform__cards-item--browser">
 						No downloads! <br> Play in browser
 					</div>
 				</div>
@@ -16,7 +16,9 @@
 						settings high — Prices low
 					</h4>
 					<p class="platform__price-price">
-						From <span><sup>€</sup>7.49</span><span>€14.99</span>
+						<span class="platform__price-price--from">From</span>
+						<span class="platform__price-price--price"><sup>€</sup>7.49</span>
+						<!-- <span>€14.99</span> -->
 					</p>
 					<p class="platform__price-subscription">
 						per month with annual subscription
@@ -30,7 +32,7 @@
 				<img src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div> -->
 			<div class="platform__image">
-				<img src="@img/platform_1.png" alt="image" width="924" height="937">
+				<img loading=lazy src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div>
 		</div>
 	</div>
