--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -9,8 +9,8 @@
 		</div>
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
-				<img class="unlimited__right-border--first" src="@img/unlimited_right_border.png" alt="image" width="277" height="498">
-				<img class="unlimited__right-border--second" src="@img//strange-man.png" alt="image" width="170" height="358">
+				<img loading="lazy" class="unlimited__right-border--first" src="@img/unlimited_right_border.png" alt="image" width="277" height="498">
+				<img loading="lazy" class="unlimited__right-border--second" src="@img//strange-man.png" alt="image" width="170" height="358">
 			</div>
 			<div class="unlimited__swiper">
 				<div class="swiper-wrapper">
@@ -18,21 +18,21 @@
 						<div class="swiper-slide__container">
 							<div class="swiper-slide__container-img-wrap">
 								<div class="swiper-slide__container-img">
-									<img src="@img/unlimited__layout_0.png" alt="content image" width="428" height="178">
+									<img loading="lazy" src="@img/unlimited__layout_0.png" alt="content image" width="428" height="178">
 								</div>
 							</div>
 							<ul class="swiper-slide__container-list">
 								<li class="swiper-slide__container-item">
 									<span>1</span> 
-									<p>Sign up for Boosteroid</p>
+									<p class="container-item--first">Sign up for Boosteroid</p>
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>2</span> 
-									<p>Subscribe</p> 
+									<p class="container-item--two">Subscribe</p> 
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>3</span>
-									<p>Pick a game, log into game account and play!</p> 
+									<p class="container-item--three">Pick a game, log into game account and play!</p> 
 								</li>
 							</ul>
 						</div>
@@ -46,9 +46,9 @@
 						<div class="devices__wrap">
 							<div class="devices__inner">
 								<div class="devices__image">
-									<img src="@img/unlimited__layout_1.svg" alt="image" width="211" height="128">
+									<img loading="lazy" src="@img/unlimited__layout_1.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text">
+								<div class="devices__text devices__text-tab2">
 									Enjoy our apps for Windows PC, Mac, and Linux (Ubuntu, Mint, Debian, Fedora). Run hundreds of PC games on any device close at hand!
 								</div>
 							</div>
@@ -64,7 +64,7 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab2-first">Download for</span>
 											<span>Windows</span>
 										</span>
 									</a>
@@ -77,7 +77,7 @@
 												</svg>												
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab2-two">Download for</span>
 											<span>Mac OS</span>
 										</span>
 									</a>
@@ -95,7 +95,7 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab2-three">Download for</span>
 											<span>Linux</span>
 										</span>
 									</a>
@@ -111,7 +111,7 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab2-four">Download for</span>
 											<span>Chromebook</span>
 										</span>
 									</a>
@@ -125,7 +125,7 @@
 								<div class="devices__image">
 									<img src="@img/unlimited__layout_2.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text">
+								<div class="devices__text devices__text-tab3">
 									Enjoy PC games on TV without a console. Grab a gamepad and play on a big screen! 
 								</div>
 							</div>
@@ -141,14 +141,14 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab3-one">Download for</span>
 											<span>Android TV</span>
 										</span>
 									</a>
 								</li>
 							</ul>
 							<div class="devices__description">
-								<p>Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
+								<p class="devices__description-tab3">Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
 							</div>
 							
 						</div>
@@ -157,9 +157,9 @@
 						<div class="devices__wrap">
 							<div class="devices__inner">
 								<div class="devices__image devices__image--tv">
-									<img class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
+									<img loading="lazy" class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
 								</div>
-								<div class="devices__text">
+								<div class="devices__text devices__text-tab4">
 									PC games on a smartphone? Why not! Play wherever you are no matter if you don’t have a computer around.
 								</div>
 							</div>
@@ -175,7 +175,7 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download for</span>
+											<span class="tab4-one">Download for</span>
 											<span>Android Mobile</span>
 										</span>
 									</a>
@@ -203,7 +203,7 @@
 	</div>
 	<div class="unlimited__footer">
 		<div class="unlimited__footer-right-img">
-			<img src="@img/strange-man.png" width="121" height="254" alt="content image">
+			<img loading="lazy" src="@img/strange-man.png" width="121" height="254" alt="content image">
 		</div>
 		<ul class="unlimited__footer-list" data-scroll data-scroll-class="fade-effect-off" data-scroll-repeat="true">
 			<li class="unlimited__footer-item">
@@ -214,7 +214,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Windows</span>
-					<span>Browser & App</span>
+					<span class="unlimited__footer--win">Browser & App</span>
 				</p>
 			</li>
 
@@ -226,7 +226,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Apple</span>
-					<span>Browser & App</span>
+					<span class="unlimited__footer--apple">Browser & App</span>
 				</p>
 			</li>
 
@@ -238,7 +238,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Linux</span>
-					<span>Browser & App</span>
+					<span class="unlimited__footer--linux">Browser & App</span>
 				</p>
 			</li>
 
@@ -250,7 +250,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Android</span>
-					<span>TV & Mobile App, Browser</span>
+					<span class="unlimited__footer--andr">TV & Mobile App, Browser</span>
 				</p>
 			</li>
 
@@ -262,7 +262,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>ChromeOS</span>
-					<span>Chromebook Web App</span>
+					<span class="unlimited__footer--chrome">Chromebook Web App</span>
 				</p>
 			</li>
 
@@ -274,7 +274,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Tizen</span>
-					<span>Samsung TV App</span>
+					<span class="unlimited__footer--sams">Samsung TV App</span>
 				</p>
 			</li>
 
@@ -286,7 +286,7 @@
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>WebOS</span>
-					<span>LG TV App</span>
+					<span class="unlimited__footer--lg">LG TV App</span>
 				</p>
 			</li>
 		</ul>
