--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -13,16 +13,16 @@
 				</ul>
 			</div> -->
 			<div class="footer__inner">
-				<h5 class="footer__title">Support</h5>
+				<h5 class="footer__title footer__title--support">Support</h5>
 				<ul class="footer__list">
 					<li class="footer__item">
 						<a href="#" class="footer__item-link">FAQ</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link">Help Center</a>
+						<a href="#" class="footer__item-link footer__item--help">Help Center</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link">Blog</a>
+						<a href="#" class="footer__item-link footer__item--blog">Blog</a>
 					</li>
 					<li class="footer__item">
 						<a href="mailto:support@boosteroid.com" class="footer__item-link">support@boosteroid.com</a>
@@ -30,16 +30,16 @@
 				</ul>
 			</div>
 			<div class="footer__inner">
-				<h5 class="footer__title">LEGAL </h5>
+				<h5 class="footer__title footer__title--legal">LEGAL </h5>
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#" class="footer__item-link">Terms and Conditions</a>
+						<a href="#" class="footer__item-link footer__item--terms">Terms and Conditions</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link">Privacy Policy</a>
+						<a href="#" class="footer__item-link footer__item--policy">Privacy Policy</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link">Cookie Policy</a>
+						<a href="#" class="footer__item-link footer__item--cookie">Cookie Policy</a>
 					</li>
 					<li class="footer__item">
 						<a href="mailto:cooperation@boosteroid.com" class="footer__item-link">cooperation@boosteroid.com</a>
@@ -107,7 +107,7 @@
 					</li>
 				</ul>
 				<div class="footer__reserved">
-					Boosteroid 2021. All right reserved
+					<span class="footer__reserved--year">Boosteroid 2022.</span> <span class="footer__reserved--all">All right reserved</span>
 				</div>
 			</div>
 		</div>
