--- a/src/html/gaming.html
+++ b/src/html/gaming.html
@@ -4,29 +4,29 @@
 		<div class="gaming__cards">
 			<article class="gaming__card" data-scroll data-scroll-speed="3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
-					<img src="@img/gaming_downloads.svg" alt="image card" width="221" height="140">
+					<img loading="lazy" src="@img/gaming_downloads.svg" alt="image card" width="221" height="140">
 				</div>
 				<div class="gaming__content">
-					<h4 class="gaming__content-title">24/4 Support</h4>
-					<div class="gaming__content-text"><p>Online chat.</p><p>Response in 1-2 minutes </p></div>
+					<h4 class="gaming__content-title gaming__content-title--first">24/4 Support</h4>
+					<div class="gaming__content-text gaming__content-text--first"><p>Online chat.</p><p>Response in 1-2 minutes </p></div>
 				</div>
 			</article>
 			<article class="gaming__card" data-scroll data-scroll-speed="2">
 				<div class="gaming__image">
-					<img src="@img/gaming_devices.svg" alt="image card" width="221" height="140">
+					<img loading="lazy" src="@img/gaming_devices.svg" alt="image card" width="221" height="140">
 				</div>
 				<div class="gaming__content">
-					<h4 class="gaming__content-title">Switching Devices</h4>
-					<p class="gaming__content-text">Start playing on one device, <br> continue on another</p>
+					<h4 class="gaming__content-title gaming__content-title--two">Switching Devices</h4>
+					<p class="gaming__content-text gaming__content-text--two">Start playing on one device, <br> continue on another</p>
 				</div>
 			</article>
 			<article class="gaming__card" data-scroll data-scroll-speed="-3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
-					<img src="@img/gaming_stream.svg" alt="image card" width="221" height="140">
+					<img loading="lazy" src="@img/gaming_stream.svg" alt="image card" width="221" height="140">
 				</div>
 				<div class="gaming__content">
-					<h4 class="gaming__content-title">Gameplay Streaming</h4>
-					<p class="gaming__content-text">Stream your gameplay to <br> YouTube! Coming in 2023</p>
+					<h4 class="gaming__content-title gaming__content-title--three">Gameplay Streaming</h4>
+					<p class="gaming__content-text gaming__content-text--three">Stream your gameplay to <br> YouTube! Coming in 2023</p>
 				</div>
 			</article>
 		</div>
