adding devices page

--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -9,25 +9,25 @@
 			<div class="plan__card plan-card" data-scroll data-scroll-speed="0.5" data-scroll-delay="0.1" data-scroll-direction="horizontal">
 				<div class="plan-card__title">
 					<h4 class="plan-card__title-title">Ultimate</h4>
-					<p class="plan-card__title-chip">recommended</p>
+					<p class="plan-card__title-chip plan-card__title-chip-recom">recommended</p>
 				</div>
 				<div class="plan-card__price">
 					<p class="plan-card__price-price"><sup>€</sup>89.89</p>
-					<p class="plan-card__price-month">per year</p>
+					<p class="plan-card__price-month plan-card__price-month--year">per year</p>
 				</div>
 				<div class="plan-card__footer">
-					<span><sup>€</sup>7.49</span>cost per month
+					<span><sup>€</sup>7.49</span><span class="plan-card__footer--recom">cost per month</span>
 				</div>
 			</div>
 
 			<div class="plan__card plan-card" data-scroll data-scroll-speed="-0.5" data-scroll-delay="0.1" data-scroll-direction="horizontal">
 				<div class="plan-card__title">
 					<h4 class="plan-card__title-title">start</h4>
-					<p class="plan-card__title-chip">POPULAR</p>
+					<p class="plan-card__title-chip plan-card__title-chip--pop">POPULAR</p>
 				</div>
 				<div class="plan-card__price">
 					<p class="plan-card__price-price"><sup>€</sup>9.89</p>
-					<p class="plan-card__price-month">per month</p>
+					<p class="plan-card__price-month plan-card__price-month--month">per month</p>
 				</div>
 				<!-- <div class="plan-card__footer">
 					<span><sup>€</sup>9.89</span>each month as one payment
@@ -54,13 +54,13 @@
 				Core features
 			</h5>
 			<ul class="plan__features-list">
-				<li class="plan__features-item">Access to the whole game catalog</li>
-				<li class="plan__features-item">Unlimited gaming session time</li>
-				<li class="plan__features-item">1080p 60 fps and more</li>
-				<li class="plan__features-item">Access to games on all compatible devices (PC, Mac, laptop, tablet, phone or TV)</li>
-				<li class="plan__features-item">Compatible with many popular gamepads (Xbox series X, S, Xbox One, PS4, etc.) </li>
-				<li class="plan__features-item">Everything is secure, we don’t share your data with anyone</li>
-				<li class="plan__features-item">No lock-in contract, no ads</li>
+				<li class="plan__features-item plan__features-item--one">Access to the whole game catalog</li>
+				<li class="plan__features-item plan__features-item--two">Unlimited gaming session time</li>
+				<li class="plan__features-item plan__features-item--three">1080p 60 fps and more</li>
+				<li class="plan__features-item plan__features-item--four">Access to games on all compatible devices (PC, Mac, laptop, tablet, phone or TV)</li>
+				<li class="plan__features-item plan__features-item--five">Compatible with many popular gamepads (Xbox series X, S, Xbox One, PS4, etc.) </li>
+				<li class="plan__features-item plan__features-item--six">Everything is secure, we don’t share your data with anyone</li>
+				<li class="plan__features-item plan__features-item--seven">No lock-in contract, no ads</li>
 			</ul>
 		</div>
 	</div>
