--- a/src/html/begin.html
+++ b/src/html/begin.html
@@ -25,7 +25,7 @@
 							</linearGradient>
 							</defs>
 						</svg>
-							<p>Powerful gaming rig on-demand</p>
+							<p class="begin__item-one">Powerful gaming rig on-demand</p>
 					</li>
 					<li class="begin__item">
 						<svg width="36" height="30" viewBox="0 0 36 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,7 +42,7 @@
 							</linearGradient>
 							</defs>
 							</svg>
-							<p>No downloads</p>
+							<p class="begin__item-two">No downloads</p>
 					</li>
 					<li class="begin__item">
 						<svg width="38" height="26" viewBox="0 0 38 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +59,7 @@
 							</linearGradient>
 							</defs>
 							</svg>
-							<p>Play in browser and on any devices</p>
+							<p class="begin__item-three">Play in browser and on any devices</p>
 					</li>
 				</ul>
 				<div class="begin__btn">
