--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 			@@include("html/power.html", {})
 			@@include("html/gaming.html", {})
 			@@include("html/unlimited.html", {})
+			@@include("html/anydevice.html", {})
 			@@include("html/plan.html", {})
 			@@include("html/begin.html", {})
 			@@include("html/partners.html", {})
