add translate on downloads page and fix buttons

--- a/src/html/secondPages/download.html
+++ b/src/html/secondPages/download.html
@@ -22,7 +22,7 @@
 									</svg>
 							</span>
 							<span class="btn-with-icon__name">
-								<span>Download for</span>
+								<span class="download-for">Download for</span>
 								<span>Windows 10</span>
 							</span>
 						</a>
@@ -39,7 +39,7 @@
 									</svg>
 							</span>
 							<span class="btn-with-icon__name">
-								<span>Download for</span>
+								<span class="download-for">Download for</span>
 								<span>Windows 7</span>
 							</span>
 						</a>
@@ -53,7 +53,7 @@
 									</svg>												
 							</span>
 							<span class="btn-with-icon__name">
-								<span>Download for</span>
+								<span class="download-for">Download for</span>
 								<span>Mac OS</span>
 							</span>
 						</a>
@@ -71,7 +71,7 @@
 									</svg>
 							</span>
 							<span class="btn-with-icon__name">
-								<span>Download for</span>
+								<span class="download-for">Download for</span>
 								<span>Linux (deb)</span>
 							</span>
 						</a>
@@ -95,7 +95,7 @@
 									</svg>
 							</span>
 							<span class="btn-with-icon__name">
-								<span>Download for</span>
+								<span class="download-for">Download for</span>
 								<span>Linux (rpm)</span>
 							</span>
 						</a>
@@ -121,7 +121,7 @@
 								</svg>
 						</span>
 						<span class="btn-with-icon__name">
-							<span>Download for</span>
+							<span class="download-for">Download for</span>
 							<span>Android Mobile</span>
 						</span>
 					</a>
@@ -144,7 +144,7 @@
 								</svg>
 						</span>
 						<span class="btn-with-icon__name">
-							<span>Download for</span>
+							<span class="download-for">Download for</span>
 							<span>Android TV</span>
 						</span>
 					</a>
