--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -3,21 +3,21 @@
 		<h3 class="partners__title subtitle title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Our Partners</h3>
 		<ul class="partners__companies">
 			<li class="partners__companies-company" data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.intel.com/content/www/us/en/customer-spotlight/stories/boosteroid-customer-story.html" target="_blank" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#intel"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#asus"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#nvidia"></use>
 					</svg>
@@ -32,28 +32,28 @@
 			</li>
 
 			<li class="partners__companies-company" data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#philips"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#sharp"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.binbox.com/?utm_source=boosteroid&utm_medium=logo&utm_campaign=partners" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://kivismart.com/en" target="_blank" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#kivi"></use>
 					</svg>
