--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="isAnimate">
 	@@include("html/head.html", {
-		"title": "Главная"
+		"title": "Home"
 	})
 <body class="locked">
 
