adding links on services

--- a/src/html/begin.html
+++ b/src/html/begin.html
@@ -63,7 +63,7 @@
 					</li>
 				</ul>
 				<div class="begin__btn">
-					<a href="#" class="begin__btn-button basic-button">PLAY NOW</a>
+					<a href="https://cloud.boosteroid.com" class="begin__btn-button basic-button">PLAY NOW</a>
 				</div>
 			</div>
 			<div class="begin__box">
