--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,13 +12,13 @@
 						<a href="downloads/" class="header__item-link header__item-link--sm">our app</a>
 					</li>
 					<li class="header__item">
-						<a href="blog/" class="header__item-link header__item-link--blog">Blog</a>
+						<a href="https://boosteroid.com/blog/" class="header__item-link header__item-link--blog">Blog</a>
 					</li>
 					<li class="header__item">
 						<a href="faq/" class="header__item-link">faq</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__item-link header__item-link--help">Help center</a>
+						<a href="https://help.boosteroid.com/en/" class="header__item-link header__item-link--help">Help center</a>
 					</li>
 				</ul>
 
@@ -121,7 +121,7 @@
 					</svg>
 					<span>English</span>
 				</button>
-				<a href="#" class="header__buttons-login second-btn">Sign In</a>
+				<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn">Sign In</a>
 			</div>
 			<div class="burger">
 				<span></span>
