--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -37,9 +37,9 @@
 
 		<div class="plan__service">
 			<div class="plan__subscrible">
-				<button class="plan__subscrible-btn basic-button">
+				<a href="https://cloud.boosteroid.com/profile/account/billing-plans" class="plan__subscrible-btn basic-button">
 					subscrible
-				</button>
+				</a>
 			</div>
 			<div class="plan__subscrible-txt">
 				<p>Visa, Mastercard, American Express, Google Pay, Apple Pay, Paysafecard and many more payment options available.</p>
