--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -37,7 +37,7 @@
 							</ul>
 						</div>
 						<div class="swiper-slide__btn">
-							<a href="#" class="swiper-slide__btn-btn basic-button">
+							<a href="https://cloud.boosteroid.com" class="swiper-slide__btn-btn basic-button">
 								PLAY NOW
 							</a>
 						</div>
