--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -10,14 +10,14 @@
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" rel="nofollow">
+				<a class="partners__companies-link" target="_blank" href="https://servers.asus.com/stories/Boosteroid-2022" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#asus"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" rel="nofollow">
+				<a class="partners__companies-link" href="#" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#nvidia"></use>
 					</svg>
@@ -32,21 +32,21 @@
 			</li>
 
 			<li class="partners__companies-company" data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" rel="nofollow">
+				<a class="partners__companies-link" href="#" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#philips"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" rel="nofollow">
+				<a class="partners__companies-link" href="#" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#sharp"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="" rel="nofollow">
+				<a class="partners__companies-link" href="#" rel="nofollow">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
 					</svg>
