--- a/src/html/secondPages/footer_with_bg.html
+++ b/src/html/secondPages/footer_with_bg.html
@@ -19,10 +19,10 @@
 						<a href="#" class="footer__item-link">FAQ</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link footer__item--help">Help Center</a>
+						<a href="https://help.boosteroid.com/en/" class="footer__item-link footer__item--help">Help Center</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link footer__item--blog">Blog</a>
+						<a href="https://boosteroid.com/blog/" class="footer__item-link footer__item--blog">Blog</a>
 					</li>
 					<li class="footer__item">
 						<a href="mailto:support@boosteroid.com" class="footer__item-link">support@boosteroid.com</a>
@@ -33,13 +33,13 @@
 				<h5 class="footer__title footer__title--legal">LEGAL </h5>
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#" class="footer__item-link footer__item--terms">Terms and Conditions</a>
+						<a href="https://boosteroid.fra1.digitaloceanspaces.com/media/terms_of_use.pdf" class="footer__item-link footer__item--terms" target="_blank">Terms and Conditions</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link footer__item--policy">Privacy Policy</a>
+						<a href="https://boosteroid.fra1.digitaloceanspaces.com/media/privacy_policy.pdf" class="footer__item-link footer__item--policy" target="_blank">Privacy Policy</a>
 					</li>
 					<li class="footer__item">
-						<a href="#" class="footer__item-link footer__item--cookie">Cookie Policy</a>
+						<a href="https://boosteroid.fra1.digitaloceanspaces.com/media/cookie_policy.pdf" class="footer__item-link footer__item--cookie" target="_blank">Cookie Policy</a>
 					</li>
 					<li class="footer__item">
 						<a href="mailto:cooperation@boosteroid.com" class="footer__item-link">cooperation@boosteroid.com</a>
