--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -25,7 +25,7 @@
 					</p>
 				</div>
 				<div class="platform__button">
-					<button class="platform__button-btn basic-button">PLAY NOW</button>
+					<a href="https://cloud.boosteroid.com" class="platform__button-btn basic-button">PLAY NOW</a>
 				</div>
 			</div>
 			<!-- <div class="platform__image" data-scroll data-scroll-speed="4">
