--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -17,7 +17,7 @@
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="/" rel="nofollow" onclick="return false">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#nvidia"></use>
 					</svg>
@@ -32,21 +32,21 @@
 			</li>
 
 			<li class="partners__companies-company" data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="/" rel="nofollow" onclick="return false">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#philips"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="/" rel="nofollow" onclick="return false">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#sharp"></use>
 					</svg>
 				</a>
 			</li>
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="#" rel="nofollow">
+				<a class="partners__companies-link" href="/" rel="nofollow" onclick="return false">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
 					</svg>
